@@ -7,7 +7,9 @@ package Dist::Zilla::Plugin::BundleInspector;
 
 use Moose;
 use MooseX::AttributeShortcuts;
+use Moose::Util::TypeConstraints;
 use Dist::Zilla::Config::BundleInspector;
+use namespace::autoclean;
 
 with qw(
   Dist::Zilla::Role::FileMunger
@@ -16,29 +18,18 @@ with qw(
 
 sub mvp_multivalue_args { qw( bundle ) }
 
+{
+  my $type = subtype as 'RegexpRef';
+  coerce $type, from 'Str', via { qr/$_/ };
 has file_name_re => (
   is         => 'ro',
-  isa        => 'RegexpRef',
+  isa        => $type,
+  coerce     => 1,
   default    => sub {
     qr{(?: ^lib/ )? ( (?: [^/]+/ )+ PluginBundle/.+? ) \.pm$}x
   },
 );
-
-# coerce
-around BUILDARGS => sub {
-  my ($orig, $class, @args) = @_;
-  my $args = $class->$orig(@args);
-
-  foreach my $re ( qw(
-    file_name_re
-  ) ){
-    # upgrade Str to RegExp
-    $args->{ $re } = qr/$args->{ $re }/
-      if exists $args->{ $re };
-  }
-
-  return $args;
-};
+}
 
 =attr bundle
 
